removed: animation; fix: tab jump; fix: movements tab "all" now active by default

--- a/css/ikaeasy.css
+++ b/css/ikaeasy.css
@@ -819,10 +819,6 @@
 #IkaEasy_Gold_per_hour.ikaeasy_red {
     color: red;
 }
-body.ikaez_animation #militaryMovements table > tbody > tr{
-    transition: all 300ms;
-}
-
 #militaryMovements table > tbody > tr:hover, #militaryMovements table > tbody > tr:focus {
     background-color: #fff0b0 !important;
 }
@@ -904,9 +900,6 @@ ul#ikaeasy_military_movements li>a {
     position: relative;
     opacity: 0.5;
 }
-body.ikaez_animation ul#ikaeasy_military_movements li>a{
-    transition: all 200ms;
-}
 ul#ikaeasy_military_movements li>a.ikaez_active {
     opacity: 1;
 }
@@ -946,7 +939,7 @@ ul#ikaeasy_military_movements #ikaez_movements_all_li {
 }
 
 #container .tabmenu .tab {
-    padding: 1px 3px 0px 2px!important;
+    padding: 0px 3px 0 2px!important;
     border-top: 1px solid transparent;
     border-left: 1px solid transparent;
     border-right: 1px solid transparent;
@@ -955,14 +948,6 @@ ul#ikaeasy_military_movements #ikaez_movements_all_li {
     border-top: 1px solid #E4B873!important;
     border-left: 1px solid #E4B873!important;
     border-right: 1px solid #E4B873!important;
-}
-body.ikaez_animation #container .tabmenu .tab {
-    transition: all 400ms;
-}
-
-
-body.ikaez_animation table.table01>tbody>tr{
-    transition: all 200ms;
 }
 
 table#inboxCity.table01>tbody>tr:hover,table#inboxCity.table01>tbody>tr:focus{
